--- a/styling.css
+++ b/styling.css
@@ -1,10 +1,46 @@
 /* BODY */
 background: #d9aa71;
-margin: 0;
+
+h1, h2, h3{
+  font-family: 'Roboto';
+}
 
 /* HEADER */
 header{
   background: #582326;
   width: 100%;
   height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: row;
+}
+
+#headericons{
+  background: red;
+  width: 150px;
+  height: 100px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+#headericons img{
+  width: auto;
+  height: 100px;
+}
+
+/* BURGERMENU */
+#burgermenu{
+  width: 30px;
+  height: 25px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.burger{
+  background: black;
+  width: 30px;
+  height: 5px;
+  border-radius: 25%;
 }
