--- a/styling.css
+++ b/styling.css
@@ -1,1 +1,10 @@
-background: #d9aa71;
+
+body {
+    background-color: #F4DDC0;
+}
+
+@media screen and (min-width: 480px) {
+    #leftsidebar {width: 200px; float: left;}
+    #main {margin-left: 216px;}
+    #video1 {width: 100%; float: left;}
+}
