change 'kurv.html' and 'styling.css'
'kurv.html' & 'styling.css'

--- a/styling.css
+++ b/styling.css
@@ -62,13 +62,11 @@ header{
 .kurvprodukt{
   background: red;
   width: 100%;
-  height: auto;
+  height: 150px;
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
-
-.kurvslet{}
 
 .kurvbillede{}
 
@@ -76,31 +74,14 @@ header{
 
 .kurvplusminus{}
 
-.kurvplusknap, .kurvminusknap{
+.kurvsletknap, .kurvplusknap, .kurvminusknap{
   width: 50px;
   height: 50px;
-}
-
-.sletplusminus{
-  font-size: 50px;
 }
 
 .kurvtotal{}
 
 .tilkassen{}
-
-
-
-.testknap{
-  height: 100px;
-  width: 100px;
-}
-
-.test{
-  font-size: 100px;
-  text-align: center;
-  vertical-align: middle;
-
 
 @media screen and (min-width: 480px) {
     #leftsidebar {width: 200px; float: left;}
