--- a/styling.css
+++ b/styling.css
@@ -114,7 +114,7 @@ text-align: center;
   height: auto;
 }
 
-.kurvsletknap, .kurvplusknap, .kurvminusknap, #kurvproduktantal1, #kurvproduktantal2, #kurvproduktantal3, .kurvproduktpris{
+.kurvsletknap, .kurvplusknap, .kurvminusknap, #kurvproduktantal1, #kurvproduktantal2, #kurvproduktantal3, .kurvproduktpris, .kurvptotalpris{
   width: auto;
   height: 50px;
   border: 0;
@@ -122,18 +122,7 @@ text-align: center;
   background: transparent;
 }
 
-.kurvptotalpris{
-  width: 100%;
-  height: auto;
-  display: flex;
-  flex-direction: row;
-  justify-content: flex-end;
-  align-items: center;
-}
-
-.kurvptotalpris h3{
-  margin: 0 175px;
-}
+#totalpris{}
 
 .tilkassen{
   width: 250px;
