--- a/styling.css
+++ b/styling.css
@@ -23,7 +23,6 @@ header{
   align-items: center;
   justify-content: space-between;
   flex-direction: row;
-  box-sizing: border-box;
   padding-left: 25px;
 }
 
@@ -48,7 +47,7 @@ header{
     text-align: center;
     line-height: 5px;
     background-color:#582326;
-    
+
 }
 
 .menu li{
@@ -61,8 +60,8 @@ header{
     color: white;
     padding: : 5px 10px;
     font-family: sans-serif;
-    letter-spacing: 2px; 
-    
+    letter-spacing: 2px;
+
 }
 
 /* BURGERMENU */
@@ -82,7 +81,24 @@ header{
 }
 
 
-/*forside i kasser*/
+/*FORSIDE*/
+
+#fronticons {
+  margin: 0px 10px 10px 10px;
+  padding: 5px 0px 0px 30px;
+  width: 150px;
+  height: 100px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
+#fronticons img{
+  width: auto;
+  height: 90px;
+  padding: 0px 0px 0px 200px;
+}
 .wrapper {
   display: flex;
   flex-direction: row;
