--- a/styling.css
+++ b/styling.css
@@ -89,19 +89,19 @@ header{
 
 #fronticons {
   margin: 0px 10px 10px 10px;
-  padding: 5px 0px 0px 30px;
-  width: 150px;
+  padding: 5px 20px 0px 30px;
+  width: 100%;
   height: 100px;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
+  box-sizing: border-box;
 }
 
 #fronticons img{
   width: auto;
   height: 90px;
-  padding: 0px 0px 0px 200px;
 }
 .wrapper {
   display: flex;
