--- a/styling.css
+++ b/styling.css
@@ -111,19 +111,28 @@ header{
 }
 
 .container1, .container2, .container3, .container4 {
+  width: 300px;
+  height: 300px;
   background: #60302c;
   border: solid #d9aa71 2px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   box-sizing: border-box;
 }
 
 .front1, .front2, .front3, .front4 {
-  width: 150px;
+  width: 350px;
+  height: auto;
   display: block;
 }
 
 .front1text, .front2text, .front3text, .front4text {
   text-align: center;
   color: #d9aa71;
+  position: relative;
+  bottom: 100px;
 }
 .frontlink{
   text-decoration: none;
