--- a/styling.css
+++ b/styling.css
@@ -187,7 +187,8 @@ footer {
   align-items: center;
   padding: 30px;
 }
-.kurvprodukt {
+
+#kurvprodukt1, #kurvprodukt2, #kurvprodukt3 {
   width: 100%;
   height: 100px;
   display: flex;
@@ -195,7 +196,8 @@ footer {
   justify-content: space-between;
   margin-bottom: 30px;
 }
-.kurvbillede img {
+
+#kurvsection img {
   width: auto;
   height: 125px;
 }
