change image size in CSS
'styling.css'

--- a/styling.css
+++ b/styling.css
@@ -149,6 +149,12 @@ header {
   text-decoration: none;
 }
 
+/* MAIN */
+main img{
+  width: auto;
+  height: 250px;
+}
+
 /* HYLDE */
 .hylde{
   width: 100%;
