--- a/styling.css
+++ b/styling.css
@@ -10,7 +10,7 @@ body {
   height: auto;
 }
 
-h1, h2, h3, p, li {
+h1, h2, h3, p, li{
   font-family: 'Roboto';
   text-decoration: none;
 }
@@ -18,6 +18,7 @@ h1, h2, h3, p, li {
 h1 {
   color: white;
   text-transform: uppercase;
+  margin-left: 25px;
 }
 
 h2{
@@ -40,7 +41,6 @@ header {
   align-items: center;
   justify-content: space-between;
   flex-direction: row;
-  padding-left: 25px;
   box-sizing: border-box;
 }
 
@@ -192,7 +192,6 @@ main img{
   width: 100%;
   height: auto;
 }
-
 #kontaktsbox{
   width: 100%;
   height: auto;
@@ -201,7 +200,6 @@ main img{
   align-items: center;
   justify-content: center;
 }
-
 .kontakoplysninger{
   width: 300px;
   height: 300px;
@@ -248,7 +246,6 @@ footer {
   align-items: center;
   padding: 30px;
 }
-
 #kurvprodukt1, #kurvprodukt2, #kurvprodukt3 {
   width: 100%;
   height: 100px;
@@ -257,7 +254,6 @@ footer {
   justify-content: space-between;
   margin-bottom: 30px;
 }
-
 #kurvsection img {
   width: auto;
   height: 125px;
