--- a/styling.css
+++ b/styling.css
@@ -309,6 +309,9 @@ footer {
 }
 /*FOR MOBILE*/
 @media screen and (max-width: 430px) {
+  h1{
+    font-size: 20px;
+  }
   #logo{
     display: block;
     margin-left: auto;
@@ -317,6 +320,7 @@ footer {
   }
   #headericons{
     width: 100px;
+    margin-right: 10px;
   }
   #headericons img{
     height: 50px;
